--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"private": true,
-	"devDependencies": {
-		"gulp": "^3.8.8",
-		"laravel-elixir": "*"
-	}
+  "private": true,
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-shell": "^0.4.1",
+    "laravel-elixir": "*"
+  }
 }
