--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
 	"name": "pandaac/theme-tibia",
+	"keywords": ["pandaac", "theme", "tibia", "opentibia"],
 	"license": "MIT",
 	"authors": [
 		{
 			"name": "Christopher Eklund",
 			"email": "eklundchristopher@gmail.com"
+		},
+		{
+			"name": "Kristoffer Eklund",
+			"email": "kristoffereklund1@gmail.com"
 		}
 	],
 	"require": {
@@ -15,5 +20,5 @@
 			"pandaac\\ThemeTibia\\": ""
 		}
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
 }
