--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"pandaac/apolune": "dev-master",
-		"fzaninotto/faker": "~1.4"
+		"cornex/generator": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
