--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": ">=5.5.9",
         "pandaac/apolune": "dev-master",
         "eklundchristopher/name-gen": "dev-master"
     },
