--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-shell": "^0.4.2",
+    "gulp-shell": "^0.4.2"
+  },
+  "dependencies": {
     "laravel-elixir": "^3.0.6",
     "cookies-js": "^1.2.1",
     "vue": "^0.12.8",
     "vue-resource": "^0.1.10"
-  },
-  "dependencies": {}
+  }
 }
